2008-01-04 Paolo Nenzi <p.nenzi@ieee.org>
 * src/frontend/runcoms.c: commented out code that did not allow rawfile
   generation for OP and AC analyses. Now rawfile is generated even for
   OP and AC. I do not know if this is consistent with spice philosopy but
   I think is nice to have.

2008-01-03 Dietmar Warning
 * src/main.c: rflag still needed.

2008-01-02 Dietmar Warning
 * src/frontend/outitf.c: Fixed rawfile ascii generation. Same like below.
 * src/frontend/inp.c: don't need local buffer w/o getcwd
 * src/conf.c: belong spice3 manual ascii is default anyway
 * src/misc/missing_math.*, src/include/missig_math.h, /src/frontend/measure.c,
   src/spicelib/analysis/dctran.c: Using a real double compare to equal.

2008-01-02 Paolo Nenzi <p.nenzi@ieee.org>
 * src/frontend/rawfile.c: Fixed rawfile ascii generation. The prevoius patch
   produced incorrect string like v(v(1)) for v(1) in the output file. 

2007-12-31 Holger Vogt
don't need buffer w/o getcwd fix for the crashing of ngspice under Windows when
   started from windows explorer.
 * src/frontend/inp.c: ngspice crashed when executing a file consisting of a simple
   control section. Fixed.

2007-12-29 Dietmar Warning
 * src/frontend/inpcom.c: 3/4 terminal recognition for bjt's
 * src/misc/string.c, stringutil.h: token function for bjt instance

2007-12-29 Holger Vogt
 * src/frontend/runcoms.c, runcoms2.c: backup the filetype problem if set in spinit
 * src/frontend/inpcom.c: no param handling for "set" commands

2007-12-27 Dietmar Warning
 * src/spicelib/devices/*/*init.c: No usage of C99 Designated Initializers
 * src/spicelib/devices/*/*par.c: only formatting issues
 * src/frontend/numparam/*.c: fixing memory problems in nupa_substitute and other
 * src/frontend/dotcard.c: strip white spaces only inside parens
 * src/misc/missing_math.*: AlmostEqualUlps in double is needed

2007-12-26 Paolo Nenzi <p.nenzi@ieee.org>
 * src/frontend/numparam/*: downgraded all files to standard C syntax with 